# multipool

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: rust.yml
benches/: benchmark.rs
examples/: basic_usage.rs  heavy_workload.rs  macro_usage.rs  view_metrics.rs  work_steal_usage.rs
src/: errors.rs  lib.rs  macros.rs  metrics.rs  priority_stealer.rs  queue.rs  stealer.rs
src/pool/: mod.rs  modes.rs  task.rs  work_stealing.rs  worker.rs
tests/: integration_test.rs  priority_tests.rs  thread_count.rs
