[package]
name = "multipool"
version = "0.1.3"
authors = ["Nisal D Ranathunga <nisaldasunpriya@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A configurable thread pool with optional work-stealing support."
keywords = ["thread", "pool", "concurrency", "work-stealing", "threadpool"]
repository = "https://github.com/ndranathunga/multipool"
categories = ["concurrency", "asynchronous"]

[dependencies]
crossbeam = "0.8"

[dev-dependencies]
criterion = "0.5"
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.14"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "tlhelp32", "handleapi"] }