[package]
name = "multipool"
version = "0.2.0"
authors = ["Nisal D Ranathunga <nisaldasunpriya@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A configurable thread pool with optional work-stealing support and task priority scheduling."
keywords = [
    "thread",
    "pool",
    "concurrency",
    "work-stealing",
    "threadpool",
    "priority",
]
repository = "https://github.com/ndranathunga/multipool"
categories = ["concurrency", "asynchronous"]

[dependencies]
crossbeam = "0.8"

[target.'cfg(target_os = "linux")'.dev-dependencies]
procfs = "0.14"

[target.'cfg(target_os = "windows")'.dev-dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "tlhelp32",
    "handleapi",
] }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[features]
bench = []

[profile.bench]
opt-level = 3

[[bench]]
name = "benchmark"
harness = false
